syntax = "proto3";

package micro.service.oauth2;

option go_package = "oauth2";

message AccessTokenReq {
    string ClientId = 1;
    string ClientSecret = 2;
    string RedirectURI = 3;
    string Scope = 4;
}

message AccessTokenReply {
    string AccessToken = 1;
    int64 ExpiresIn = 2;
}

message UserReq {

}

message UserReply {

}

message UserOpenIDReq {

}

message UserOpenIDReply {

}

service Oauth2 {
    rpc AccessToken (AccessTokenReq) returns (AccessTokenReply) {
    }
    rpc Auth (UserReq) returns (UserReply) {
    }
    rpc UserOpenID (UserOpenIDReq) returns (UserOpenIDReply) {
    }
}

// protoc --proto_path=. --micro_out=. --go_out=. oauth2.proto